--- a/hardpagestyle.css
+++ b/hardpagestyle.css
@@ -28,3 +28,6 @@ label{
   font-size: 18px;
   font-family: Georgia, 'Times New Roman', Times, serif;
 }
+label::first-letter{
+  text-transform: lowercase;
+}
